completed laptop MQ, added backgrounds and fixed some issues regarding margins on mobile MQ

--- a/css/laptop.css
+++ b/css/laptop.css
@@ -1,13 +1,65 @@
+body {
+  font-size: 1.2rem;
+}
+
 header {
   display: flex;
   justify-content: space-between;
 }
 
+header,
+.testimonials-container {
+  margin: 0 auto;
+  padding: 40px 60px 0;
+  max-width: 1440px;
+}
+
+.hero {
+  margin: 0;
+}
+
+.hero > h1 {
+  text-align: left;
+}
+
+.hero > p {
+  text-align: left;
+  margin: 0;
+}
+
+.rating {
+  width: fit-content;
+}
+
+.rating:first-child {
+  margin-left: -100px;
+}
+
+.rating:nth-child(0n + 2) {
+  margin-left: -50px;
+}
+
 .testimonials-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: end;
 }
 
 .testimonial-card {
+  margin: 0;
+  min-height: 180px;
+}
+
+article:first-child {
+  margin-top: 1rem;
   margin-right: 3rem;
+}
+
+article:nth-child(0n + 2) {
+  margin-top: 3rem;
+  margin-right: 3rem;
+}
+
+article:nth-child(0n + 3) {
+  margin-top: 5rem;
 }
